css fix to truncate long lines

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -13,3 +13,9 @@ body {
 .w-33 {
   width: 33%;
 }
+
+.truncate {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
